# geeqie

./: .clang-tidy  CHECKLIST.md  CODING.md  DEVELOPER-NOTES.md  README.md  TESTING.md  TRANSLATORS.md  config.h.in  geeqie.spec.in  meson.build  meson_options.txt  org.geeqie.cache-maintenance.desktop.in
.github/workflows/: appimage-aarch64.yml  appimage-minimal-aarch64.yml  appimage-minimal-x86_64.yml  appimage-x86_64.yml  check-build-actions.yml  check-compile-freebsd.yml
auto-complete/: geeqie
build-aux/: authors.sh  boolean-comparison-check.awk  check-glib-types.sh  clang-tidy-check.sh  create-doxygen-lua-api.sh  create-shortcuts-xml.sh  debug-check.sh  desktop-file-validate.sh  enum-check.sh  fd-refcount-test.py  geeqie.cppcheck  gen-changelog.sh  generate-man-page.sh  get-test-images.sh  goto-project-root.sh  gtk4-migration-regression-check.sh  image-test.py  isolate-test.sh  lua-test.sh  meson.build  template-desktop.sh  temporary-comments-check.sh  test-ancillary-files.sh  translators.sh  untranslated-text.sh  update-translation.sh  version.sh
data/: meson.build  org.geeqie.Geeqie.desktop.in
data/authors/: authors.gresource.xml  meson.build
data/color/: icc.gresource.xml  meson.build
data/completions/: meson.build
data/css/: css.gresource.xml  custom.css  meson.build
data/icons/: icons.gresource.xml  meson.build
data/icons/svg/: meson.build
data/images/: images.gresource.xml  meson.build
data/man/: geeqie.1  meson.build
data/plugins/: meson.build
data/plugins/camera-import/: geeqie-camera-import  meson.build
data/plugins/exif-datetime-to-file/: meson.build
data/plugins/export-jpeg/: meson.build
data/plugins/geocode-parameters/: meson.build
data/plugins/image-crop/: geeqie-image-crop  meson.build
data/plugins/lens/: meson.build
data/plugins/open-with/: meson.build
data/plugins/random-image/: meson.build
data/plugins/resize-image/: meson.build
data/plugins/rotate/: meson.build
data/plugins/symlink/: geeqie-symlink  meson.build
data/plugins/tethered-photography/: geeqie-tethered-photography  meson.build
data/plugins/video-player/: meson.build
data/ui/: meson.build  ui.gresource.xml
doc/: doxygen.conf  meson.build
doc/docbook/: GuideOtherSoftware.xml
packaging/: meson.build  new-release-appimages.sh  new-release.sh
packaging/rpm/: meson.build
plugins/camera-import/: geeqie-camera-import-hook-script
plugins/exif-datetime-to-file/: geeqie-exif-datetime-to-file
plugins/resize-image/: geeqie-resize-image
plugins/rotate/: geeqie-rotate
po/: meson.build  sk.po  translators.gresource.xml
scripts/: geeqie-download-appimage.sh  image-test.py  image-test.sh  isolate-test.sh  test-all.sh  test-ancillary-files.sh  untranslated-text.sh
snap/: snapcraft.yaml
snap/local/: auto-backend.sh  ensure-gdkpixbuf-cache.sh  env-imagemagick.sh  fix-platform-order.sh  force-wayland.sh  force-x11.sh  set-xdg-vars.sh
src/: advanced-exif.cc  bar-sort.cc  bar.c  cache-loader.cc  cache-maint.cc  cache.cc  cache.h  cellrenderericon.cc  collect-dlg.cc  collect-table.cc  collect-table.h  collect.cc  collect.h  color-man-heif.cc  color-man.cc  color-man.h  command-line-handling.cc  compat-deprecated.h  compat.h  debug.cc  dnd.cc  dupe.cc  dupe.h  editors.cc  exif-common.cc  exif.h  exiv2.cc  filecache.cc  filedata.c  filedata.cc  filedata.h  filefilter.cc  filefilter.h  fullscreen.cc  geometry.cc  geometry.h  gq-color.cc  gq-color.h  gq-size.cc  gq-size.h  (+85 more)
src/filedata/: filedata.cc  filelist.cc  meson.build
src/icons/: icons.gresource.xml  meson.build
src/pan-view/: meson.build  pan-calendar.cc  pan-calendar.h  pan-folder.cc  pan-folder.h  pan-grid.cc  pan-grid.h  pan-item.cc  pan-item.h  pan-timeline.cc  pan-timeline.h  pan-types.h  pan-util.cc  pan-util.h  pan-view-filter.cc  pan-view-filter.h  pan-view-search.cc  pan-view.cc  pan-view.h
src/ui/: search-and-run.ui
src/view-file/: meson.build  view-file-icon.cc  view-file-list.cc  view-file.cc
tests/: filecache.cc  meson.build
tools/: clang-tidy-check.sh  decode-sim  decode-sim.pl  devel-install.sh  doxygen-help.sh  doxygen.sh  geeqie-download-appimage.sh  geeqie-install-debian.sh  gen-translations-stats.sh  gen_translations_stats.sh  keyword-mark.sh  keyword-merge.sh  modify-downloaded-icons.sh  recent-collections.sh  test-all.sh  update-translation.sh  web-help.sh
