# SPDX-License-Identifier: GPL-2.0-or-later

subdir('camera-import')
subdir('exif-datetime-to-file')
subdir('export-jpeg')
subdir('geocode-parameters')
subdir('image-crop')
subdir('lens')
subdir('open-with')
subdir('random-image')
subdir('resize-image')
subdir('rotate')
subdir('symlink')
subdir('tethered-photography')
subdir('video-player')

i18n.merge_file(
    input : 'org.geeqie.template.desktop.in',
    output : 'org.geeqie.template.desktop',
    type : 'desktop',
    po_dir : podir,
    install : true,
    install_dir : appdir)
