# SPDX-License-Identifier: GPL-2.0-or-later

pan_view_sources = files('pan-calendar.cc',
'pan-calendar.h',
'pan-folder.cc',
'pan-folder.h',
'pan-grid.cc',
'pan-grid.h',
'pan-item.cc',
'pan-item.h',
'pan-timeline.cc',
'pan-timeline.h',
'pan-types.h',
'pan-util.cc',
'pan-util.h',
'pan-view.cc',
'pan-view-filter.cc',
'pan-view-filter.h',
'pan-view.h',
'pan-view-search.cc',
'pan-view-search.h')

code_sources += pan_view_sources
