# SPDX-License-Identifier: GPL-2.0-or-later

install_data('geeqie-camera-import', 'geeqie-camera-import-hook-script', install_dir : gq_bindir)

i18n.merge_file(
    input : 'org.geeqie.camera-import.desktop.in',
    output : 'org.geeqie.camera-import.desktop',
    type : 'desktop',
    po_dir : podir,
    install : true,
    install_dir : desktopdir)
