# SPDX-License-Identifier: GPL-2.0-or-later

install_data('geeqie-exif-datetime-to-file', install_dir : gq_bindir)

i18n.merge_file(
    input : 'org.geeqie.exif-datetime-to-file.desktop.in',
    output : 'org.geeqie.exif-datetime-to-file.desktop',
    type : 'desktop',
    po_dir : podir,
    install : true,
    install_dir : desktopdir)
