# SPDX-License-Identifier: GPL-2.0-or-later

install_data('geeqie-export-jpeg', install_dir : gq_bindir)

i18n.merge_file(
    input : 'org.geeqie.export-jpeg.desktop.in',
    output : 'org.geeqie.export-jpeg.desktop',
    type : 'desktop',
    po_dir : podir,
    install : true,
    install_dir : desktopdir)
