# SPDX-License-Identifier: GPL-2.0-or-later

install_data('geeqie-tethered-photography', 'geeqie-tethered-photography-hook-script', install_dir : gq_bindir)

i18n.merge_file(
    input : 'org.geeqie.tethered-photography.desktop.in',
    output : 'org.geeqie.tethered-photography.desktop',
    type : 'desktop',
    po_dir : podir,
    install : true,
    install_dir : desktopdir)
